--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav-link active" aria-current="page" href="/iCoder-A-Coding-Platform">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/about.html"
+              <a class="nav-link" aria-current="page" href="/iCoder-A-Coding-Platform/about.html"
                 >About</a
               >
             </li>
@@ -66,13 +66,13 @@
                 <li>
                   <hr class="dropdown-divider" />
                 </li>
-                <li><a class="dropdown-item" href="book.html">Books</a></li>
+                <li><a class="dropdown-item" href="/iCoder-A-Coding-Platform/book.html">Books</a></li>
                 <!-- <li><a class="dropdown-item" href="#">Support</a></li> -->
                 <li><a class="dropdown-item" href="#">Write for us</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/contact.html"
+              <a class="nav-link" aria-current="page" href="/iCoder-A-Coding-Platform/contact.html"
                 >Contact Us</a
               >
             </li>
@@ -132,8 +132,6 @@
             >
               Web Development
             </a>
-            <!-- <button class="btn btn-primary">Web Development</button> -->
-            <!-- <button class="btn btn-success">Tech Fun</button> -->
           </div>
         </div>
         <div class="carousel-item">
@@ -143,7 +141,6 @@
             <p>Technology news, Development and Trend.</p>
             <button class="btn btn-danger">Technology</button>
             <button class="btn btn-primary">Web Development</button>
-            <!-- <button class="btn btn-success">Tech Fun</button> -->
           </div>
         </div>
         <div class="carousel-item">
@@ -153,7 +150,6 @@
             <p>Technology news, Development and Trend.</p>
             <button class="btn btn-danger">Technology</button>
             <button class="btn btn-primary">Web Development</button>
-            <!-- <button class="btn btn-success">Tech Fun</button> -->
           </div>
         </div>
       </div>
@@ -188,7 +184,6 @@
                 >World</strong
               >
               <h3 class="mb-0">Global Confrences</h3>
-              <!-- <div class="mb-1 text-body-secondary">Nov 12</div> -->
               <p class="card-text mb-auto">
                 The Global Conference of Software Developers is a premier
                 international event that brings together software professionals,
