--- a/book.html
+++ b/book.html
@@ -29,10 +29,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="/iCoder-A-Coding-Platform">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/about.html"
+              <a class="nav-link" aria-current="page" href="/iCoder-A-Coding-Platform/about.html"
                 >About</a
               >
             </li>
@@ -65,13 +65,12 @@
                 <li>
                   <hr class="dropdown-divider" />
                 </li>
-                <li><a class="dropdown-item active" href="book.html">Books</a></li>
-                <!-- <li><a class="dropdown-item" href="#">Support</a></li> -->
+                <li><a class="dropdown-item active" href="/iCoder-A-Coding-Platform/book.html">Books</a></li>
                 <li><a class="dropdown-item" href="#">Write for us</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/contact.html">Contact Us</a>
+              <a class="nav-link" aria-current="page" href="/iCoder-A-Coding-Platform/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
