--- a/book.html
+++ b/book.html
@@ -406,53 +406,53 @@
           <p class="card-text">
             This is the Digital Electronics book from beginner to advanced level. Best book for learning Digital circuits, gates.
           </p>
-          <a href="books/" class="btn btn-success">Download</a>
+          <a href="books/digielec.pdf" class="btn btn-success">Download</a>
         </div>
       </div>
     </div>
 
     <div class="book-sec8 ms-5 gap-5 my-4 d-flex">
       <div class="ms-5 card" style="width: 18rem">
-        <img src="book-img/b13.jpg" class="card-img-top" alt="..." />
+        <img src="book-img/b28.png" class="card-img-top" alt="..." />
         <div class="card-body">
-          <h5 class="card-title">DSA</h5>
+          <h5 class="card-title">Metasploit</h5>
           <p class="card-text">
-            This is the DSA book from beginner to advanced level. Best book for learning DSA programming. Data Structures and Algorithms (DSA) is a crucial part of computer science and programming. This book covers all the essential concepts and techniques.
+            This is the Metasploit book from beginner to advanced level. Best book for learning Metasploit framework. This book covers all the essential concepts and techniques.
           </p>
-          <a href="books/DSA_CompleteNotes.pdf" class="btn btn-success">Download</a>
+          <a href="books/Metasploit.pdf" class="btn btn-success">Download</a>
         </div>
       </div>
       
       <div class="ms-5 card" style="width: 18rem">
-        <img src="book-img/b13.jpg" class="card-img-top" alt="..." />
+        <img src="book-img/b29.png" class="card-img-top" alt="..." />
         <div class="card-body">
-          <h5 class="card-title">DSA-practiseQuestions</h5>
+          <h5 class="card-title">Atomic Habits</h5>
           <p class="card-text">
-            This is the DSA-practiseQuestions sheet from beginner to advanced level. Best for learning DSA this sheet contains 450+ questions for Practices.
+            This is the Atomic Habits book from beginner to advanced level. Best book for learning about building good habits and breaking bad ones. This book covers all the essential concepts and techniques.
           </p>
-          <a href="books/DSA_CompleteNotes.pdf" class="btn btn-success">Download</a>
+          <a href="books/atomic-habits.pdf" class="btn btn-success">Download</a>
         </div>
       </div>
 
       <div class=" card" style="width: 18rem">
-        <img src="book-img/b14.png" class="card-img-top" alt="..." />
+        <img src="book-img/b30.png" class="card-img-top" alt="..." />
         <div class="card-body">
-          <h5 class="card-title">Node Js</h5>
+          <h5 class="card-title">Black Hat Python</h5>
           <p class="card-text">
-            This is the Node Js book from beginner to advanced level. Best book for learning Node Js programming.
+            This is the Black Hat Python book from beginner to advanced level. Best book for learning Python programming for hacking.
           </p>
-          <a href="books/Node js Hand written Notes  86page.pdf" class="btn btn-success">Download</a>
+          <a href="books/Black Hat Python.pdf" class="btn btn-success">Download</a>
         </div>
       </div>
 
       <div class=" card" style="width: 18rem">
-        <img src="book-img/b15.png" class="card-img-top" alt="..." />
+        <img src="book-img/b31.png" class="card-img-top" alt="..." />
         <div class="card-body">
-          <h5 class="card-title">React performance tools</h5>
+          <h5 class="card-title">Hacking: The art of exploitation</h5>
           <p class="card-text">
-            This is the React performance tools book from beginner to advanced level. Best book for learning React performance tools.
+            This is the Hacking: The art of exploitation book from beginner to advanced level. Best book for learning hacking techniques and methodologies.
           </p>
-          <a href="books/React Performance Optimization Technique.pdf" class="btn btn-success">Download</a>
+          <a href="books/Hacking- The Art of Exploitation (2nd ed. 2008) - Erickson.pdf" class="btn btn-success">Download</a>
         </div>
       </div>
     </div>
