--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/iCoder-A-Coding-Platform">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/iCoder-A-Coding-Platform"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/iCoder-A-Coding-Platform/about.html"
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="/iCoder-A-Coding-Platform/about.html"
                 >About</a
               >
             </li>
@@ -66,18 +74,26 @@
                 <li>
                   <hr class="dropdown-divider" />
                 </li>
-                <li><a class="dropdown-item" href="/iCoder-A-Coding-Platform/book.html">Books</a></li>
-                <!-- <li><a class="dropdown-item" href="#">Support</a></li> -->
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="/iCoder-A-Coding-Platform/book.html"
+                    >Books</a
+                  >
+                </li>
                 <li><a class="dropdown-item" href="#">Write for us</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/iCoder-A-Coding-Platform/contact.html"
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="/iCoder-A-Coding-Platform/contact.html"
                 >Contact Us</a
               >
             </li>
           </ul>
-          <form class="d-flex" role="search">
+          <form class="d-flex ms-auto my-2 my-lg-0" role="search">
             <input
               class="form-control me-2"
               type="search"
@@ -115,11 +131,10 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="1.jpg" class="d-block w-100" alt="..." />
+          <img src="1.jpg" class="d-block w-100 img-fluid" alt="..." />
           <div class="carousel-caption d-none d-md-block">
             <h2>Welcome to iCoder</h2>
             <p>Technology news, Development and Trend.</p>
-            <!-- <button class="btn btn-danger">Technology</button> -->
             <a
               href="https://en.wikipedia.org/wiki/Technology"
               class="btn btn-danger"
@@ -135,7 +150,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="2.jpg" class="d-block w-100" alt="..." />
+          <img src="2.jpg" class="d-block w-100 img-fluid" alt="..." />
           <div class="carousel-caption d-none d-md-block">
             <h2>The Best Coding Blog</h2>
             <p>Technology news, Development and Trend.</p>
@@ -144,7 +159,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="3.jpg" class="d-block w-100" alt="..." />
+          <img src="3.jpg" class="d-block w-100 img-fluid" alt="..." />
           <div class="carousel-caption d-none d-md-block">
             <h2>Website for Developers</h2>
             <p>Technology news, Development and Trend.</p>
@@ -198,13 +213,12 @@
             </div>
             <div class="col-auto d-none d-lg-block">
               <img
-                class="bd-placeholder-img"
-                height="250"
-                preserveAspectRatio="xMidYMid slice"
-                role="img"
-                width="200"
                 src="gc.png"
-                alt=""
+                alt="Global Conference"
+                class="img-fluid"
+                height="250"
+                width="200"
+                style="object-fit: cover"
               />
             </div>
           </div>
@@ -218,7 +232,6 @@
                 >Design</strong
               >
               <h3 class="mb-0">Learn Designing</h3>
-              <!-- <div class="mb-1 text-body-secondary">Nov 11</div> -->
               <p class="mb-auto">
                 Web designing is the process of creating the visual layout and
                 user experience of websites. It involves planning and building
@@ -237,13 +250,12 @@
             </div>
             <div class="col-auto d-none d-lg-block">
               <img
-                class="bd-placeholder-img"
-                height="250"
-                preserveAspectRatio="xMidYMid slice"
-                role="img"
-                width="220"
                 src="thumb2.jpeg"
-                alt=""
+                alt="Design"
+                class="img-fluid"
+                height="250"
+                width="220"
+                style="object-fit: cover"
               />
             </div>
           </div>
@@ -260,7 +272,6 @@
                 >Development</strong
               >
               <h3 class="mb-0">Android Development</h3>
-              <!-- <div class="mb-1 text-body-secondary">Nov 12</div> -->
               <p class="card-text mb-auto">
                 Android development is the process of creating applications for
                 devices running the Android operating system, primarily using
@@ -277,27 +288,25 @@
             </div>
             <div class="col-auto d-none d-lg-block">
               <img
-                class="bd-placeholder-img"
-                height="250"
-                preserveAspectRatio="xMidYMid slice"
-                role="img"
-                width="200"
                 src="thumb3.png"
-                alt=""
+                alt="Android Development"
+                class="img-fluid"
+                height="250"
+                width="200"
+                style="object-fit: cover"
               />
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div
-            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
+            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-280 position-relative"
           >
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 text-success-emphasis"
-                >Taining</strong
+                >Training</strong
               >
-              <h3 class="mb-0">Coading Practices</h3>
-              <!-- <div class="mb-1 text-body-secondary">Nov 11</div> -->
+              <h3 class="mb-0">Coding Practices</h3>
               <p class="mb-auto">
                 Coding practice involves regularly writing and improving code to
                 enhance programming skills. It helps developers understand
@@ -317,13 +326,12 @@
             </div>
             <div class="col-auto d-none d-lg-block">
               <img
-                class="bd-placeholder-img"
-                height="280"
-                preserveAspectRatio="xMidYMid slice"
-                role="img"
-                width="230"
                 src="thumb4.jpg"
-                alt=""
+                alt="Coding Practices"
+                class="img-fluid"
+                height="280"
+                width="230"
+                style="object-fit: cover"
               />
             </div>
           </div>
@@ -331,50 +339,100 @@
       </div>
     </div>
 
-    <h2 class="text-center my-5">Download Free E-Books</h2>
+    <h2 class="fs-2 fs-md-1 text-center my-5">Download Free E-Books</h2>
 
-    <div class="book-sec1 ms-5 gap-5 my-4 d-flex">
-      <div class="ms-5 card" style="width: 18rem">
-        <img src="book-img/b1.png" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Python</h5>
-          <p class="card-text">
-            This is the Python book from beginner to advanced level. Best book for learning Python programming.
-          </p>
-          <a href="books/PythonBook.pdf" class="btn btn-success">Download</a>
+    <div class="container my-4">
+      <div class="row g-4">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card h-100">
+            <img
+              src="book-img/b1.png"
+              class="card-img-top img-fluid"
+              alt="Python Book"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Python</h5>
+              <p class="card-text">
+                This is the Python book from beginner to advanced level. Best
+                book for learning Python programming.
+              </p>
+              <a href="books/PythonBook.pdf" class="btn btn-success"
+                >Download</a
+              >
+            </div>
+          </div>
         </div>
-      </div>
 
-      <div class=" card" style="width: 18rem">
-        <img src="book-img/b2.png" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">C programming</h5>
-          <p class="card-text">
-            This is the C programming book from beginner to advanced level. Best book for learning C programming. C is mother of all programming languages. Best for starting Coding journey from this languages.
-          </p>
-          <a href="books/C Language (class notes).pdf" class="btn btn-success">Download</a>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card h-100">
+            <img
+              src="book-img/b2.png"
+              class="card-img-top img-fluid"
+              alt="C Programming Book"
+            />
+            <div class="card-body">
+              <h5 class="card-title">C programming</h5>
+              <p class="card-text">
+                This is the C programming book from beginner to advanced level.
+                Best book for learning C programming. C is mother of all
+                programming languages. Best for starting Coding journey from
+                this languages.
+              </p>
+              <a
+                href="books/C Language (class notes).pdf"
+                class="btn btn-success"
+                >Download</a
+              >
+            </div>
+          </div>
         </div>
-      </div>
 
-      <div class=" card" style="width: 18rem">
-        <img src="book-img/b3.png" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">C++</h5>
-          <p class="card-text">
-            This is the C++ book from beginner to advanced level. Best book for learning C++ programming. C++ is an advanced version of C programming language. C++ use the object-oriented programming paradigm to structure the code.
-          </p>
-          <a href="books/C++ Complete Handwritten Notes.pdf" class="btn btn-success">Download</a>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card h-100">
+            <img
+              src="book-img/b3.png"
+              class="card-img-top img-fluid"
+              alt="C++ Programming Book"
+            />
+            <div class="card-body">
+              <h5 class="card-title">C++</h5>
+              <p class="card-text">
+                This is the C++ book from beginner to advanced level. Best book
+                for learning C++ programming. C++ is an advanced version of C
+                programming language. C++ use the object-oriented programming
+                paradigm to structure the code.
+              </p>
+              <a
+                href="books/C++ Complete Handwritten Notes.pdf"
+                class="btn btn-success"
+                >Download</a
+              >
+            </div>
+          </div>
         </div>
-      </div>
-      
-      <div class=" card" style="width: 18rem">
-        <img src="book-img/b4.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Java</h5>
-          <p class="card-text">
-            This is the Java book from beginner to advanced level. Java is a high-level, class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.
-          </p>
-          <a href="books/Java 8 In a Week_ A Beginner's Guide to Java Programming.pdf" class="btn btn-success">Download</a>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card h-100">
+            <img
+              src="book-img/b4.jpg"
+              class="card-img-top img-fluid"
+              alt="Java Programming Book"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Java</h5>
+              <p class="card-text">
+                This is the Java book from beginner to advanced level. Java is a
+                high-level, class-based, object-oriented programming language
+                that is designed to have as few implementation dependencies as
+                possible.
+              </p>
+              <a
+                href="books/Java 8 In a Week_ A Beginner's Guide to Java Programming.pdf"
+                class="btn btn-success"
+                >Download</a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -383,8 +441,8 @@
       <a href="book.html" class="btn btn-success">Read More Books..</a>
     </div>
 
-    <footer class="container">
-      <p class="float-right"><a href="#">Back to top</a></p>
+    <footer class="container text-center my-4">
+      <p><a href="#">Back to top</a></p>
       <p>
         © 2024-2025 iCoder, Inc. · <a href="#">Privacy</a> ·
         <a href="#">Terms</a>
@@ -396,6 +454,5 @@
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
       crossorigin="anonymous"
     ></script>
-    
   </body>
 </html>
