--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>iCoder-About Page</title>
+    <title>iCoder - About Page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,14 +30,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="/iCoder-A-Coding-Platform">Home</a>
+              <a class="nav-link" aria-current="page" href="/iCoder-A-Coding-Platform">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/about.html"
-                >About</a
-              >
+              <a class="nav-link active" aria-current="page" href="/about.html">About</a>
             </li>
-
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -76,62 +73,59 @@
     </nav>
 
     <div class="container my-4">
-        <div class="row featurette d-flex align-items-center justify-content-center">
-            <div class="col-md-7">
-              <h2 class="featurette-heading fw-normal lh-1">
-                First featurette heading.
-                <span class="text-body-secondary">It’ll blow your mind.</span>
-              </h2>
-              <p class="lead">
-                Some great placeholder content for the first featurette here. Imagine some
-                exciting prose here.
-              </p>
-            </div>
-            <div class="col-md-5">
-              <img src="about-1.jpg" alt="">
-            </div>
+      <div class="row featurette d-flex align-items-center justify-content-center">
+        <div class="col-md-7">
+          <h2 class="featurette-heading fw-normal lh-1">
+            First featurette heading.
+            <span class="text-body-secondary">It’ll blow your mind.</span>
+          </h2>
+          <p class="lead">
+            Some great placeholder content for the first featurette here. Imagine some exciting prose here.
+          </p>
         </div>
+        <div class="col-md-5">
+          <img src="about-1.jpg" class="img-fluid" alt="About Image 1">
+        </div>
+      </div>
     </div>
 
     <div class="container my-4">
-        <div class="row featurette d-flex align-items-center justify-content-center">
-            <div class="col-md-7 order-md-2">
-              <h2 class="featurette-heading fw-normal lh-1">
-                First featurette heading.
-                <span class="text-body-secondary">It’ll blow your mind.</span>
-              </h2>
-              <p class="lead">
-                Some great placeholder content for the first featurette here. Imagine some
-                exciting prose here.
-              </p>
-            </div>
-            <div class="col-md-5">
-              <img src="about-2.jpg" alt="" srcset="">
-            </div>
+      <div class="row featurette d-flex align-items-center justify-content-center">
+        <div class="col-md-7 order-md-2">
+          <h2 class="featurette-heading fw-normal lh-1">
+            Second featurette heading.
+            <span class="text-body-secondary">It’ll blow your mind.</span>
+          </h2>
+          <p class="lead">
+            Some great placeholder content for the second featurette here. Imagine some exciting prose here.
+          </p>
         </div>
+        <div class="col-md-5">
+          <img src="about-2.jpg" class="img-fluid" alt="About Image 2">
+        </div>
+      </div>
     </div>
     
     <div class="container my-4">
-        <div class="row featurette d-flex align-items-center justify-content-center">
-            <div class="col-md-7">
-              <h2 class="featurette-heading fw-normal lh-1">
-                First featurette heading.
-                <span class="text-body-secondary">It’ll blow your mind.</span>
-              </h2>
-              <p class="lead">
-                Some great placeholder content for the first featurette here. Imagine some
-                exciting prose here.
-              </p>
-            </div>
-            <div class="col-md-5">
-              <img src="about-3.jpg" alt="" srcset="">
-            </div>
+      <div class="row featurette d-flex align-items-center justify-content-center">
+        <div class="col-md-7">
+          <h2 class="featurette-heading fw-normal lh-1">
+            Third featurette heading.
+            <span class="text-body-secondary">It’ll blow your mind.</span>
+          </h2>
+          <p class="lead">
+            Some great placeholder content for the third featurette here. Imagine some exciting prose here.
+          </p>
         </div>
+        <div class="col-md-5">
+          <img src="about-3.jpg" class="img-fluid" alt="About Image 3">
+        </div>
+      </div>
     </div>
 
     <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>© 2024-2025 iCoder, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+      <p class="float-end"><a href="#">Back to top</a></p>
+      <p>© 2024-2025 iCoder, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
     </footer>
     
     <script
