--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               >
             </li>
           </ul>
-          <form class="d-flex ms-auto my-2 my-lg-0" role="search">
+          <!-- <form class="d-flex ms-auto my-2 my-lg-0" role="search">
             <input
               class="form-control me-2"
               type="search"
@@ -102,7 +102,7 @@
               aria-label="Search"
             />
             <button class="btn btn-outline-light" type="submit">Search</button>
-          </form>
+          </form> -->
         </div>
       </div>
     </nav>
