--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
               <a class="nav-link" aria-current="page" href="/iCoder-A-Coding-Platform/contact.html">Contact Us</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
+          <!-- <form class="d-flex" role="search">
             <input
               class="form-control me-2"
               type="search"
@@ -69,7 +69,7 @@
               aria-label="Search"
             />
             <button class="btn btn-outline-light" type="submit">Search</button>
-          </form>
+          </form> -->
         </div>
       </div>
     </nav>
