--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,10 @@
             <a class="nav-link active" aria-current="page" href="/iCoder-A-Coding-Platform/contact.html">Contact Us</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
+        <!-- <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
           <button class="btn btn-outline-light" type="submit">Search</button>
-        </form>
+        </form> -->
       </div>
     </div>
   </nav>
