--- a/book.html
+++ b/book.html
@@ -783,6 +783,248 @@
     </div>
   </div>
 
+  <h2 class="text-center my-5">Notebook For Coding practices</h2>
+
+  <div class="container">
+    <div class="row mb-4">
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp1.png" class="card-img-top img-fluid" alt="C Language Interview Questions" />
+          <div class="card-body">
+            <h5 class="card-title">C Language Interview Questions</h5>
+            <p class="card-text">
+              This is the C Language Interview Questions book from beginner to advanced level. Best
+              book for learning C Language concepts.
+            </p>
+            <a href="coding/C Language Interview Question.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp2.png" class="card-img-top img-fluid" alt="C Language Placement Materials" />
+          <div class="card-body">
+            <h5 class="card-title">C Language Placement Materials</h5>
+            <p class="card-text">
+              This is the C Language Placement Materials book from beginner to advanced level. Best
+              book for learning C Language concepts.
+            </p>
+            <a href="coding/C Language Placement Materials_.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp1.png" class="card-img-top img-fluid" alt="" />
+          <div class="card-body">
+            <h5 class="card-title">C Programming 1 & 2 Placement Paper</h5>
+            <p class="card-text">
+              This is the C Programming 1 & 2 Placement Paper book from beginner to advanced level. Best
+              book for learning C Programming concepts.
+            </p>
+            <a href="coding/C Programming 1 & 2 Placement Paper_.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp2.png" class="card-img-top img-fluid" alt="Coding Question Placement Paper" />
+          <div class="card-body">
+            <h5 class="card-title">Coding Question Placement Paper</h5>
+            <p class="card-text">
+              This is the Coding Question Placement Paper book from beginner to advanced level. Best
+              book for learning Coding concepts.
+            </p>
+            <a href="coding/Coding Question Placement Paper_.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row mb-4">
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp1.png" class="card-img-top img-fluid" alt="Coding Round CheatBook" />
+          <div class="card-body">
+            <h5 class="card-title">Coding Round CheatBook</h5>
+            <p class="card-text">
+              This is the Coding Round CheatBook from beginner to advanced level. Best
+              book for learning Coding concepts.
+            </p>
+            <a href="coding/Coding Round CheatBook.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp2.png" class="card-img-top img-fluid" alt="" />
+          <div class="card-body">
+            <h5 class="card-title">JAVA Interview Qsn & Ans</h5>
+            <p class="card-text">
+              This is the JAVA Interview Qsn & Ans book from beginner to advanced level. Best
+              book for learning JAVA concepts.
+            </p>
+            <a href="coding/JAVA Interview Qsn & Ans_.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp1.png" class="card-img-top img-fluid" alt="" />
+          <div class="card-body">
+            <h5 class="card-title">JAVA Interview Question</h5>
+            <p class="card-text">
+              This is the JAVA Interview Question book from beginner to advanced level. Best
+              book for learning JAVA concepts.
+            </p>
+            <a href="coding/JAVA Interview Question(1).pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp2.png" class="card-img-top img-fluid" alt="MCQ Placement study Materials" />
+          <div class="card-body">
+            <h5 class="card-title">MCQ Placement study Materials</h5>
+            <p class="card-text">
+              This is the MCQ Placement study Materials book from beginner to advanced level. Best
+              book for learning MCQ concepts.
+            </p>
+            <a href="coding/MCQ Placement study Materials_.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row mb-4">
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp1.png" class="card-img-top img-fluid" alt="" />
+          <div class="card-body">
+            <h5 class="card-title">MCQ Pseudocode</h5>
+            <p class="card-text">
+              This is the MCQ Pseudocode book from beginner to advanced level. Best
+              book for learning MCQ concepts.
+            </p>
+            <a href="coding/MCQ Pseudocode.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp2.png" class="card-img-top img-fluid" alt="OOPs Interview Question" />
+          <div class="card-body">
+            <h5 class="card-title">OOPs Interview Question</h5>
+            <p class="card-text">
+              This is the OOPs Interview Question book from beginner to advanced level. Best
+              book for learning OOPs concepts.
+            </p>
+            <a href="coding/OOPs Interview Question.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp1.png" class="card-img-top img-fluid" alt="" />
+          <div class="card-body">
+            <h5 class="card-title">Python Interview Question</h5>
+            <p class="card-text">
+              This is the Python Interview Question book from beginner to advanced level. Best
+              book for learning Python concepts.
+            </p>
+            <a href="coding/PYTHON Interview Question_.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp2.png" class="card-img-top img-fluid" alt="Python Most Ask Interview Qsn" />
+          <div class="card-body">
+            <h5 class="card-title">Python Most Ask Interview Qsn</h5>
+            <p class="card-text">
+              This is the Python Most Ask Interview Qsn book from beginner to advanced level. Best
+              book for learning Python concepts.
+            </p>
+            <a href="coding/Python Most Ask Interview Qsn_.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row mb-4">
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp1.png" class="card-img-top img-fluid" alt="" />
+          <div class="card-body">
+            <h5 class="card-title">Python PROGRAM LIST</h5>
+            <p class="card-text">
+              This is the Python PROGRAM LIST book from beginner to advanced level. Best
+              book for learning Python concepts.
+            </p>
+            <a href="coding/PYTHON PROGRAM LIST.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp2.png" class="card-img-top img-fluid" alt="" />
+          <div class="card-body">
+            <h5 class="card-title">Repeated Coding Question</h5>
+            <p class="card-text">
+              This is the Repeated Coding Question book from beginner to advanced level. Best
+              book for learning coding concepts.
+            </p>
+            <a href="coding/Repeated Coding Question_.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp1.png" class="card-img-top img-fluid" alt="" />
+          <div class="card-body">
+            <h5 class="card-title">Repeated Coding Solution</h5>
+            <p class="card-text">
+              This is the Repeated Coding Solution book from beginner to advanced level. Best
+              book for learning coding concepts.
+            </p>
+            <a href="coding/Repeated Coding Solution_.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6">
+        <div class="card book-card">
+          <img src="book-img/cp2.png" class="card-img-top img-fluid" alt="TCS Question Paper" />
+          <div class="card-body">
+            <h5 class="card-title">TCS Question Paper</h5>
+            <p class="card-text">
+              This is the TCS Question Paper book from beginner to advanced level. Best
+              book for learning coding concepts.
+            </p>
+            <a href="coding/TCS Question Paper.pdf" class="btn btn-success">Download</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <footer class="container text-center my-4">
     <p><a href="#">Back to top</a></p>
     <p>
